--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sirius-rd/vireoxlibrary",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "files": [
     "dist"
@@ -23,10 +23,15 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook": "concurrently 'yarn:watch:*'",
+    "watch:storybook": "storybook dev -p 6006",
+    "storybook-docs": "storybook dev --docs",
+    "storybook-build-docs": "storybook build --docs",
+    "build-storybook": "storybook build",
+    "watch:tailwind": "npx tailwindcss -i ./src/style.css -o ./dist/output.css"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.17",
     "flowbite": "^1.6.5",
     "tailwindcss": "^3.3.2",
     "vue": "^3.2.47"
@@ -35,18 +40,21 @@
     "@storybook/addon-essentials": "^7.0.7",
     "@storybook/addon-interactions": "^7.0.7",
     "@storybook/addon-links": "^7.0.7",
+    "@storybook/addon-styling": "^1.0.5",
     "@storybook/blocks": "^7.0.7",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@storybook/vue3": "^7.0.7",
     "@storybook/vue3-vite": "^7.0.7",
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^8.0.1",
     "path": "^0.12.7",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup-plugin-typescript2": "^0.34.1",
     "storybook": "^7.0.7",
+    "storybook-tailwind-foundations": "^1.1.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vite-plugin-dts": "^2.3.0",
