--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           yarn
           yarn run build
           yarn run watch:tailwind
-          yarn run build-storybook
+          yarn run build-storybook-docs
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
