--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "types": "./dist/main.d.ts",
   "scripts": {
     "dev": "vite",
+    "test": "vitest",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "storybook": "concurrently 'yarn:watch:*'",
@@ -48,9 +49,11 @@
     "@storybook/vue3": "^7.0.7",
     "@storybook/vue3-vite": "^7.0.7",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/test-utils": "^2.3.2",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.0.1",
     "gh-pages": "^5.0.0",
+    "happy-dom": "^9.10.9",
     "path": "^0.12.7",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
@@ -61,6 +64,7 @@
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vite-plugin-dts": "^2.3.0",
+    "vitest": "^0.31.0",
     "vue-tsc": "^1.4.2"
   },
   "description": "Vue3 Component Library based on Tailwind CSS and Flowbite Design System",
