--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -26,6 +26,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - run: yarn install --immutable --immutable-cache --check-cache
+    - run: yarn install
     - run: vitest run
     - run: vue-tsc
