--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -25,7 +25,6 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run test
+    - run: yarn install --immutable --immutable-cache --check-cache
+    - run: yarn test
     - run: vue-tsc
