--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -5,7 +5,7 @@ name: Test before PR
 
 on:
   push:
-    branches: [ "main" ]
+     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
@@ -26,5 +26,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn install --immutable --immutable-cache --check-cache
-    - run: yarn test
-    - run: vue-tsc
+    - run: yarn run test
+    - run: yarn run tsc
