--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
           persist-credentials: false
       - name: Install and Build 🔧
         run: | # Install npm packages and build the Storybook files
-          yarn
+          yarn install --immutable --immutable-cache --check-cache
           yarn run build
           yarn run watch:tailwind
           yarn run storybook-build-docs
