--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.17",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.2",
     "tailwindcss": "^3.3.2",
     "vue": "^3.2.47"
   },
