--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: 18.x
           registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies and build 🔧
         run:
