--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -14,9 +14,7 @@ jobs:
           node-version: 18.x
           registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies and build 🔧
-        run:
-            yarn
-            yarn run build
+        run: yarn && yarn run build
       - name: Publish package on NPM 📦
         run:
           yarn npm publish
