--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
+        uses: actions/checkout@v3
         with:
           persist-credentials: false
+      - name: Setup Node.js 18.x 🧶
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
       - name: Install and Build 🔧
         run: | # Install npm packages and build the Storybook files
           yarn install --immutable --immutable-cache --check-cache
