--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/sirius-ea/VireoXlibrary.git"
+  },
+  "resolutions": {
+    "jackspeak": "2.1.1"
   }
 }
