--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "storybook-docs": "storybook dev --docs",
     "storybook-build-docs": "storybook build --docs",
     "build-storybook": "storybook build",
-    "watch:tailwind": "npx tailwindcss -i ./src/style.css -o ./dist/output.css"
+    "watch:tailwind": "npx tailwindcss -i ./src/style.css -o ./dist/output.css",
+    "postinstall": "rm -rf ./node_modules/@types/react"
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.17",
