--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.0.17",
     "tailwindcss": "^3.3.2",
+    "uuid": "^9.0.1",
     "vue": "^3.2.47"
   },
   "devDependencies": {
@@ -49,6 +50,7 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@storybook/vue3": "^7.0.7",
     "@storybook/vue3-vite": "^7.0.7",
+    "@types/uuid": "^9.0.7",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vue/test-utils": "^2.3.2",
     "autoprefixer": "^10.4.14",
