--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@sirius-rd/vireoxlibrary",
   "homepage": "https://sirius-ea.github.io/VireoXlibrary/",
   "private": false,
-  "version": "0.6.3-beta",
+  "version": "0.6.3",
   "type": "module",
   "files": [
     "dist"
